apps/bluemap/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: bluemap
  namespace: default
subsets:
  - addresses:
      - ip: 5.9.57.177
    ports:
      - name: http
        port: 8100
