apps/bluemap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluemap
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8100
  type: ClusterIP
