apps/bluemap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluemap
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: bluemap.trashstack.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap
                port:
                  number: 80
  tls:
    - hosts:
        - bluemap.trashstack.dev
      secretName: bluemap-tls
